@@ -1,8 +1,9 @@
 freebsd-buildutils (9.0-7) UNRELEASED; urgency=low
 
   * sys/endian.h: Don't include_next <machine/endian.h>, just include.
+  * Add execvP().
 
- -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:30:08 +0100
+ -- Robert Millan <rmh@debian.org>  Wed, 15 Feb 2012 22:57:00 +0100
 
 freebsd-buildutils (9.0-6) unstable; urgency=low
 
